src/objects/TR1__EducationHistory__c.object
<CustomObject>
    <fields>
        <fullName>RC_Attendance_End_Date__c</fullName>
        <label>Attendance End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RC_Attendance_Start_Date__c</fullName>
        <label>Attendance Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RC_Degree_Date__c</fullName>
        <label>Degree Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__AcademicCreditCode__c</fullName>
        <label>Academic Credit Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__ClassRank__c</fullName>
        <label>Class Rank</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Education History</relationshipLabel>
        <relationshipName>Education_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__DegreeDate__c</fullName>
        <label>Degree Date</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__DegreeName__c</fullName>
        <label>Degree Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__DegreeType__c</fullName>
        <label>Degree Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Degree_Major__c</fullName>
        <label>Degree Major</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__EducationHistoryExtID__c</fullName>
        <formula>TR1__SchoolName__c &amp;&apos;:&apos; &amp; TEXT(TR1__SchoolType__c)</formula>
        <label>Education History Ext ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__EndDate__c</fullName>
        <label>Attendance End Date</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Organization_Unit__c</fullName>
        <label>Organization Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Region__c</fullName>
        <label>Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__SchoolName__c</fullName>
        <label>School Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__SchoolType__c</fullName>
        <label>School Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>university</fullName>
                </value>
                <value>
                    <fullName>college</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__StartDate__c</fullName>
        <label>Attendance Start Date</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Education History</label>
    <nameField>
        <displayFormat>EDH-{0000000000}</displayFormat>
        <label>Education History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Education History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>